--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.7.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.0.6",
     "axios": "^1.4.0",
     "next": "^13.4.19",
     "quagga": "^0.12.1",
