--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
     "axios": "^1.4.0",
+    "html5-qrcode": "^2.3.8",
     "next": "^13.4.19",
-    "quagga": "^0.12.1",
-    "quagga-scanner": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
