--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
     "axios": "^1.4.0",
+    "barapi": "^0.1.104",
     "html5-qrcode": "^2.3.8",
     "next": "^13.4.19",
     "react": "^18.2.0",
