--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@formkit/auto-animate": "^0.7.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-portal": "^1.0.3",
     "axios": "^1.4.0",
     "barapi": "^0.1.104",
     "html5-qrcode": "^2.3.8",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
