--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
+    "swiper": "^10.2.0",
     "tailwind-variants": "^0.1.13"
   },
   "devDependencies": {
