--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
